--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ nav ul {
 
 nav ul li a {
   text-decoration: none;
-  color: #333;
+  color: #bda074;
   font-weight: bold;
   font-size: 18px;
   padding: 10px;
